# global-hook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  detour.cpp  detour.hpp  main.cpp
